[gd_scene load_steps=16 format=3 uid="uid://bw7dps7wo0xpd"]

[ext_resource type="PackedScene" uid="uid://bqkma6am1x3s3" path="res://assets/scenes/secrets/objects/motos_player.tscn" id="1_6cnbp"]
[ext_resource type="Script" path="res://assets/scenes/secrets/motos/motos_stage_template.gd" id="1_eruiv"]
[ext_resource type="PackedScene" uid="uid://b4uofkmct6an" path="res://assets/scenes/secrets/objects/motos_enemy_weak.tscn" id="2_s5nic"]
[ext_resource type="Texture2D" uid="uid://bwqyo72paebpf" path="res://assets/graphics/Motos/bg.jpg" id="2_uec1c"]
[ext_resource type="Texture2D" uid="uid://bu0xh3r42shc5" path="res://assets/graphics/Motos/gridfloor.png" id="3_krpec"]
[ext_resource type="PackedScene" uid="uid://d3mpwvu1fbcn1" path="res://assets/scenes/secrets/objects/motos_pit.tscn" id="4_d3k3p"]
[ext_resource type="AudioStream" uid="uid://csm0455xn53jv" path="res://assets/music/Motos/StageTheme.ogg" id="4_haafo"]
[ext_resource type="AudioStream" uid="uid://gaqpae68l846" path="res://assets/sounds/Motos/sfxRoundstart.ogg" id="5_qdkiw"]
[ext_resource type="AudioStream" uid="uid://dvygekft81jj4" path="res://assets/sounds/Motos/sfxRoundclear.ogg" id="6_63oxg"]
[ext_resource type="AudioStream" uid="uid://n56ovr7y547p" path="res://assets/sounds/Motos/sfxExtend.ogg" id="7_t5dj7"]
[ext_resource type="AudioStream" uid="uid://du2vo27cuwath" path="res://assets/sounds/Motos/sfxPartSelect.ogg" id="8_rwbb8"]
[ext_resource type="AudioStream" uid="uid://cionogn70tl5m" path="res://assets/sounds/Motos/sfxPartConfirm.ogg" id="9_cleq1"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tsxjd"]
texture = ExtResource("3_krpec")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_8guv8"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_tsxjd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d2kj0"]
size = Vector2(64, 160)

[node name="MotosStageTemplate" type="Node2D"]
script = ExtResource("1_eruiv")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(512, 256)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_uec1c")

[node name="Grid" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0)
tile_set = SubResource("TileSet_8guv8")
format = 2
layer_0/tile_data = PackedInt32Array(131082, 0, 0, 196618, 0, 0, 262154, 0, 0, 327690, 0, 0, 393226, 0, 0, 458762, 0, 0, 524298, 0, 0, 589834, 0, 0, 655370, 0, 0, 720906, 0, 0, 786442, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 786452, 0, 0, 786453, 0, 0, 851989, 0, 0, 720917, 0, 0, 655381, 0, 0, 589845, 0, 0, 524309, 0, 0, 458773, 0, 0, 393237, 0, 0, 327701, 0, 0, 262165, 0, 0, 196629, 0, 0, 131093, 0, 0, 131092, 0, 0, 131091, 0, 0, 131090, 0, 0, 131089, 0, 0, 131088, 0, 0, 131087, 0, 0, 131086, 0, 0, 131085, 0, 0, 131084, 0, 0, 131083, 0, 0, 196619, 0, 0, 262155, 0, 0, 327691, 0, 0, 393227, 0, 0, 458763, 0, 0, 524299, 0, 0, 589835, 0, 0, 655371, 0, 0, 720907, 0, 0, 786444, 0, 0, 786443, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 720916, 0, 0, 655380, 0, 0, 589844, 0, 0, 524308, 0, 0, 458772, 0, 0, 393236, 0, 0, 327700, 0, 0, 262164, 0, 0, 196628, 0, 0, 196627, 0, 0, 196626, 0, 0, 196625, 0, 0, 196624, 0, 0, 196623, 0, 0, 196622, 0, 0, 196621, 0, 0, 196620, 0, 0, 393228, 0, 0, 327692, 0, 0, 262156, 0, 0, 262157, 0, 0, 327693, 0, 0, 393229, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 393235, 0, 0, 327699, 0, 0, 327698, 0, 0, 262162, 0, 0, 262161, 0, 0, 262160, 0, 0, 327695, 0, 0, 327694, 0, 0, 393230, 0, 0, 458766, 0, 0, 524303, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 524305, 0, 0, 524304, 0, 0, 589838, 0, 0, 655374, 0, 0, 655377, 0, 0, 458768, 0, 0, 458767, 0, 0, 524302, 0, 0, 655375, 0, 0, 655376, 0, 0, 393231, 0, 0, 262158, 0, 0, 262159, 0, 0, 327696, 0, 0, 393233, 0, 0, 327697, 0, 0, 393232, 0, 0, 458769, 0, 0, 393234, 0, 0, 262163, 0, 0, 524300, 0, 0, 589836, 0, 0, 655372, 0, 0, 720908, 0, 0, 720909, 0, 0, 655373, 0, 0, 589837, 0, 0, 524301, 0, 0, 458765, 0, 0, 458764, 0, 0, 458770, 0, 0, 524306, 0, 0, 589842, 0, 0, 655378, 0, 0, 720914, 0, 0, 720915, 0, 0, 655379, 0, 0, 589843, 0, 0, 524307, 0, 0, 458771, 0, 0)

[node name="Floor" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="MotosEnemyWeak" parent="Enemies" instance=ExtResource("2_s5nic")]
position = Vector2(512, 128)

[node name="MotosEnemyWeak2" parent="Enemies" instance=ExtResource("2_s5nic")]
position = Vector2(384, 128)

[node name="MotosEnemyWeak3" parent="Enemies" instance=ExtResource("2_s5nic")]
position = Vector2(640, 128)

[node name="MotosPlayer" parent="." instance=ExtResource("1_6cnbp")]
position = Vector2(512, 384)

[node name="MotosPit" parent="." instance=ExtResource("4_d3k3p")]

[node name="CollisionShape2D" parent="MotosPit" index="0"]
position = Vector2(512, 0)

[node name="CollisionShape2D2" parent="MotosPit" index="1"]
position = Vector2(512, 512)

[node name="CollisionShape2D3" parent="MotosPit" index="2"]
position = Vector2(256, 256)

[node name="CollisionShape2D4" parent="MotosPit" index="3"]
position = Vector2(768, 256)

[node name="CollisionShape2D5" type="CollisionShape2D" parent="MotosPit"]
position = Vector2(928, 264)
shape = SubResource("RectangleShape2D_d2kj0")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="MotosPit"]
position = Vector2(1000, 264)
shape = SubResource("RectangleShape2D_d2kj0")

[node name="Sounds" type="Node" parent="."]

[node name="musTheme" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_haafo")

[node name="sfxStart" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_qdkiw")

[node name="sfxClear" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("6_63oxg")

[node name="sfxExtend" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("7_t5dj7")

[node name="sfxHover" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("8_rwbb8")

[node name="sfxSelect" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("9_cleq1")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Sounds"]

[connection signal="finished" from="Sounds/sfxClear" to="." method="_on_sfx_clear_finished"]

[editable path="MotosPit"]
